Corrección de eliminación en media
